tests/compiletests/ui/lang/issue-452.stderr
error: function pointer types are not allowed
  --> $DIR/issue-452.rs:8:1
   |
LL | fn use_cmp(cmp: fn(&Position) -> u32) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: used by unnamed global (%10)
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:8:4
   |
LL | fn use_cmp(cmp: fn(&Position) -> u32) {
   |    ^^^^^^^
note: called by `issue_452::main`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: indirect calls are not supported in SPIR-V
  --> $DIR/issue-452.rs:12:27
   |
LL |     let _ = if cmp(&a) <= cmp(&b) { a } else { b };
   |                           ^^^^^^^
   |
note: used from within `issue_452::use_cmp`
  --> $DIR/issue-452.rs:8:4
   |
LL | fn use_cmp(cmp: fn(&Position) -> u32) {
   |    ^^^^^^^
note: called by `issue_452::main`
  --> $DIR/issue-452.rs:17:5
   |
LL |     use_cmp(|p| p.0);
   |     ^^^^^^^^^^^^^^^^
note: called by `main`
  --> $DIR/issue-452.rs:16:8
   |
LL | pub fn main() {
   |        ^^^^

error: aborting due to 2 previous errors

